@@ -139,6 +139,7 @@ v 8.11.5
   - Optimize branch lookups and force a repository reload for Repository#find_branch. !6087
   - Fix member expiration date picker after update. !6184
   - Fix suggested colors options for new labels in the admin area. !6138
+  - Optimize discussion notes resolving and unresolving
   - Fix GitLab import button
   - Fix confidential issues being exposed as public using gitlab.com export
   - Remove gitorious from import_sources. !6180
